add_library (DirectoryService DSBlockPostProcessing.cpp DSBlockPreProcessing.cpp DirectoryService.cpp FinalBlockPostProcessing.cpp FinalBlockPreProcessing.cpp MicroBlockProcessing.cpp PoWProcessing.cpp PoW2Processing.cpp ShardingPostProcessing.cpp ShardingPreProcessing.cpp ViewChangePreProcessing.cpp ViewChangePostProcessing.cpp)
target_include_directories (DirectoryService PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_link_libraries (DirectoryService PUBLIC AccountData Mediator Node Persistence Trie Utils)